--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -353,8 +353,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scenario_type: ["clash", "coops", "campaigns", "sections"]
-        language: ["en", "pl", "cs", "fr", "de"]
+        scenario_type: ["sections", "draft-scenarios/campaigns"]
+        language: ["pl"]
+        # scenario_type: ["clash", "coops", "campaigns", "sections"]
+        # language: ["en", "pl", "cs", "fr", "de"]
     with:
       scenario_type: ${{ matrix.scenario_type }}
       language: ${{ matrix.language }}
