Fix mono maps cache key + test change

--- a/.github/workflows/build-individual-scenarios.yaml
+++ b/.github/workflows/build-individual-scenarios.yaml
@@ -128,9 +128,7 @@ jobs:
         with:
           path: assets/maps/
           key: >-
-            maps-${{ matrix.scenario }}-${{
-            hashFiles(format('{0}/{1}.tex', inputs.scenario_type, matrix.scenario))
-            }}-${{ hashFiles('assets/maps/*.png') }}
+            maps-${{ matrix.scenario }}-${{ hashFiles('assets/maps/*.png') }}
           restore-keys: |
             maps-${{ matrix.scenario }}-
 
