--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -353,7 +353,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        scenario_type: ["sections", "draft-scenarios/campaigns"]
+        scenario_type: ["sections"]
         language: ["pl"]
         # scenario_type: ["clash", "coops", "campaigns", "sections"]
         # language: ["en", "pl", "cs", "fr", "de"]
