--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -347,8 +347,8 @@ jobs:
         run: echo "should_trigger=true" >> $GITHUB_OUTPUT
 
   call_build:
-    # needs: publish
-    # if: ${{ needs.publish.outputs.should_trigger == 'true' && github.event_name != 'pull_request' }}
+    needs: publish
+    if: ${{ needs.publish.outputs.should_trigger == 'true' && github.event_name != 'pull_request' }}
     uses: ./.github/workflows/build-individual-scenarios.yaml
     strategy:
       fail-fast: false
