--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Cache po4a entries [${{ matrix.language }}]
-        if: matrix.language != 'en'
+        if: matrix.language != 'en' && github.event_name == 'pull_request'
         id: cache-po4a
         uses: actions/cache@v4
         with:
