--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Generate translations for ${{ matrix.language }}
         if: matrix.language != 'en' && steps.cache-po4a.outputs.cache-hit != 'true'
-        uses: qwrtln/po4a-action@single-lang
+        uses: qwrtln/po4a-action@v1.2
         with:
           version: "0.73"
           config: "po4a.cfg"
@@ -226,7 +226,7 @@ jobs:
 
       - name: Generate translations for ${{ matrix.language }}
         if: ${{ matrix.language != 'en' }}
-        uses: qwrtln/po4a-action@single-lang
+        uses: qwrtln/po4a-action@1.2
         with:
           version: "0.73"
           config: "po4a.cfg"
