--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -33,6 +33,7 @@ jobs:
           version: "0.73"
           config: "po4a.cfg"
           args: "--no-update"
+          language: ${{ matrix.language }}
 
       - name: Set version
         run: echo "VERSION=$(cat .version | tr . _)" >> $GITHUB_ENV
@@ -164,6 +165,7 @@ jobs:
           version: "0.73"
           config: "po4a.cfg"
           args: "--no-update"
+          language: ${{ matrix.language }}
 
       - name: Download monochrome maps
         uses: actions/download-artifact@v4
