--- a/.github/workflows/build-individual-scenarios.yaml
+++ b/.github/workflows/build-individual-scenarios.yaml
@@ -74,11 +74,12 @@ jobs:
 
       - name: Generate translations for ${{ inputs.language }}
         if: inputs.language != 'en' && steps.cache-po4a.outputs.cache-hit != 'true'
-        uses: qwrtln/po4a-action@v1
+        uses: qwrtln/po4a-action@v1.2
         with:
           version: "0.73"
           config: "po4a.cfg"
           args: "--no-update"
+          language: ${{ inputs.language }}
 
       - name: Find and use only assets referenced in ${{ matrix.scenario }}
         id: find-assets
