--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -28,11 +28,12 @@ jobs:
 
       - name: Generate translations for ${{ matrix.language }}
         if: ${{ matrix.language != 'en' }}
-        uses: qwrtln/po4a-action@v1
+        uses: qwrtln/po4a-action@v1.2
         with:
           version: "0.73"
           config: "po4a.cfg"
           args: "--no-update"
+          language: ${{ matrix.language }}
 
       - name: Set version
         run: echo "VERSION=$(cat .version | tr . _)" >> $GITHUB_ENV
@@ -159,11 +160,12 @@ jobs:
 
       - name: Generate translations for ${{ matrix.language }}
         if: ${{ matrix.language != 'en' }}
-        uses: qwrtln/po4a-action@v1
+        uses: qwrtln/po4a-action@v1.2
         with:
           version: "0.73"
           config: "po4a.cfg"
           args: "--no-update"
+          language: ${{ matrix.language }}
 
       - name: Download monochrome maps
         uses: actions/download-artifact@v4
