--- a/tools/container/Dockerfile
+++ b/tools/container/Dockerfile
@@ -128,9 +128,8 @@ RUN <<EOF
   chmod -R 777 /opt/texlive/texdir/texmf-var
   /opt/texlive/texdir/bin/*/luaotfload-tool --update --force
 
+  # TeXlive names bin directory depending on architecture - detect it automatically
   TEXLIVE_BIN_DIR=$(find /opt/texlive/texdir/bin -maxdepth 1 -type d -name "*-linuxmusl" | head -n1)
-  echo "TeX Live binary directory: ${TEXLIVE_BIN_DIR}"
-
   ln -sf "${TEXLIVE_BIN_DIR}" /opt/texlive/current-bin
 
   apk del --purge \
