--- a/.github/workflows/publish-container.yaml
+++ b/.github/workflows/publish-container.yaml
@@ -8,7 +8,8 @@ on:
       - 'tools/container/**'
       - '.github/workflows/publish-container.yaml'
   pull_request:
-    branches: [main]
+    branches:
+      - main
     paths:
       - 'tools/container/**'
       - '.github/workflows/publish-container.yaml'
