--- a/.github/workflows/build-release.yaml
+++ b/.github/workflows/build-release.yaml
@@ -49,7 +49,7 @@ jobs:
       - name: Compile mission book
         uses: xu-cheng/latex-action@v4
         with:
-          extra_system_packages: "inkscape"
+          docker_image: ghcr.io/qwrtln/homm3bg:latest
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           root_file: main_${{ matrix.language }}.tex
@@ -188,7 +188,7 @@ jobs:
       - name: Compile monochrome mission book
         uses: xu-cheng/latex-action@v4
         with:
-          extra_system_packages: "inkscape"
+          docker_image: ghcr.io/qwrtln/homm3bg:latest
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: export HOMM3_GITHUB_BUILD=1 HOMM3_NO_ART_BACKGROUND=1
