--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -102,7 +102,7 @@ jobs:
         if: steps.cache-pdf.outputs.cache-hit != 'true'
         uses: xu-cheng/latex-action@v4
         with:
-          extra_system_packages: "inkscape"
+          docker_image: ghcr.io/qwrtln/homm3bg:latest
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: export HOMM3_GITHUB_BUILD=1
@@ -275,7 +275,7 @@ jobs:
       - name: Compile monochrome mission book
         uses: xu-cheng/latex-action@v4
         with:
-          extra_system_packages: "inkscape"
+          docker_image: ghcr.io/qwrtln/homm3bg:latest
           latexmk_use_lualatex: true
           latexmk_shell_escape: true
           pre_compile: export HOMM3_GITHUB_BUILD=1 HOMM3_NO_ART_BACKGROUND=1
