Add emojis to build display

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -12,15 +12,34 @@ env:
   IMAGEMAGICK_URL: https://github.com/ImageMagick/ImageMagick/releases/download/7.1.1-46/ImageMagick-8209e84-gcc-x86_64.AppImage
 
 jobs:
+  matrix-setup:
+    runs-on: ubuntu-latest
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+    - id: set-matrix
+      run: |
+        cat << 'EOF' > matrix.json
+        {
+          "include": [
+            { "language": "en", "display": "🇺🇸 English" },
+            { "language": "pl", "display": "🇵🇱 Polski" },
+            { "language": "cs", "display": "🇨🇿 Čeština" },
+            { "language": "fr", "display": "🇫🇷 Français" },
+            { "language": "de", "display": "🇩🇪 Deutsch" }
+          ]
+        }
+        EOF
+        echo "matrix=$(jq -c . matrix.json)" >> $GITHUB_OUTPUT
+
   build:
     runs-on: ubuntu-latest
     outputs:
       number_of_pages: ${{ steps.check_pages.outputs.number_of_pages }}
+    name: ${{ matrix.display }}
     strategy:
       fail-fast: false
-      matrix:
-        language: ["en", "pl", "cs", "fr", "de"]
-
+      matrix: ${{ fromJson(needs.matrix-setup.outputs.matrix) }}
     steps:
       - name: Set up repository
         uses: actions/checkout@v4
@@ -217,8 +236,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
-      matrix:
-        language: ["en", "pl", "cs", "fr", "de"]
+      matrix: ${{ fromJson(needs.matrix-setup.outputs.matrix) }}
 
     steps:
       - name: Set up repository
@@ -301,11 +319,10 @@ jobs:
       image: minidocks/poppler
     needs: build
     if: github.event_name == 'pull_request'
+    name: 🔍 Page count check [${{ matrix.display }}]
     strategy:
       fail-fast: false
-      matrix:
-        language: ["pl", "cs", "fr", "de"]
-
+      matrix: ${{ fromJson(needs.matrix-setup.outputs.matrix) }}
     steps:
       - name: Download PDFs
         uses: actions/download-artifact@v4
