--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -34,6 +34,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
+    needs: matrix-setup
     outputs:
       number_of_pages: ${{ steps.check_pages.outputs.number_of_pages }}
     name: ${{ matrix.display }}
@@ -315,6 +316,7 @@ jobs:
 
   check_pages:
     runs-on: ubuntu-latest
+    needs: matrix-setup
     container:
       image: minidocks/poppler
     needs: build
