--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -235,7 +235,7 @@ jobs:
           retention-days: ${{ env.ARTIFACT_RETENTION_DAYS }}
 
   build_monochrome:
-    needs: [make_maps_monochrome]
+    needs: [matrix-setup, make_maps_monochrome]
     runs-on: ubuntu-latest
     strategy:
       fail-fast: false
@@ -344,11 +344,10 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: [build, build_monochrome]
+    needs: [matrix-setup, build, build_monochrome]
     strategy:
       fail-fast: false
-      matrix:
-        language: ["en", "pl", "cs", "fr", "de"]
+      matrix: ${{ fromJson(needs.matrix-setup.outputs.check-pages-matrix) }}
     outputs:
       should_trigger: ${{ steps.check.outputs.should_trigger }}
     steps:
